# P5-Lego

./: .gitignore  README.md
BusRemoteTool/: busremotetool.pro  camerawidget.cpp  camerawidget.h  camerawidget.ui  commcamera.cpp  commcamera.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
BusRemoteTool/controllers/: car.cpp  car.h
BusRemoteTool/objects/: cam.cpp  cam.h  motor.cpp  motor.h  nxtcommunication.cpp  nxtcommunication.h  rectangle.cpp
FollowTrack/: FollowTrack.sln
FollowTrack/FollowTrack/: BezierCurve.cs  Drive.cs  FollowTrack.csproj  NumericExtensions.cs  PathPoint.cs  Program.cs  Vector2.cs  fieldOfViewCorrecter.cs
NXTSoftware/: Communication.cpp  Communication.h  Driving.cpp  Driving.h  Makefile  SteeringTypes.h  program.cpp  program.oil
Shared/: Connectivity.h  Tools.cpp  Tools.h
Shared/Camera/: BezierCurve.cpp  BezierCurve.h  BusStopDetectionComponent.cpp  BusStopDetectionComponent.h  CMakeLists.txt  CamCalcTypes.h  DriveLogic.cpp  DriveLogic.h  Driving.cpp  Driving.h  FieldOfViewCorrector.cpp  FieldOfViewCorrector.h  IComponents.cpp  IComponents.h  ISensorControllers.cpp  Makefile  ObstacleDetectionComponent.cpp  ObstacleDetectionComponent.h  SpeedZoneDetectionComponent.cpp  SpeedZoneDetectionComponent.h  StayWithinLaneComponent.cpp  StayWithinLaneComponent.h  SteeringTypes.cpp
accelerometer/: program.cpp
backandforthmotor/: program.cpp
calibrate/: Driving.cpp  Driving.h  Makefile  program.cpp
driving/: Makefile  driving.cpp  driving.h  program.cpp
driving_v1/: driving.h  program.cpp
ultrasonic/: Makefile  program.cpp
(+41 files in other folders)
